fixed ul spacing

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -282,15 +282,8 @@ header .logo {
   margin: 20px 0;
 }
 
-footer {
-  margin: 32px 0;
-  text-align: center;
-  font-size: 14px;
-}
-footer {
-	display: flex;
-	justify-content: center;
-}
+
+
 .services-header {
   display:flex;
   justify-content: center;
@@ -339,35 +332,38 @@ footer {
 .click-box button {
   margin: 10px;
 }
+
 .footer2 {
   display: flex;
-  justify-content:center;
-  width: 0 auto;
+  justify-content:space-between;
+  margin: 30px;
+  font-size: 14px;
 }
 .footer-text{
   display:flex;
   flex-direction: column;
-  align-items: space-evenly;
-  justify-content: center;
+  /* align-items: space-evenly; */
+  /* justify-content: ; */
   padding-left: 15px;
   width: 50%;
+  align-items: flex-start;
 }
 .footer-img {
-  width: 50%;
+  width: 40%; 
 }
 
 .footer-text p {
-  margin-bottom: 10px;
+   margin-bottom: 10px; 
 }
 .footer-text ul {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  justify-content: space-between;
   line-height: 2;
-  
-
+  list-style-type: circle;
+  padding-left: 50px;
 }
+
+
 .copyright {
   display: flex;
   justify-content: center;
